# Shape-Matching-Element-Method

./: .gitignore  .gitmodules  README.md  SNH_tet_dF.m  biem.m  compute_projected_weights.m  compute_shape_matrices.m  identify_seams.m  mass_matrix_36.m  mass_matrix_n.m  monomial_basis.m  monomial_basis_grad.m  neohookean_func.m  neohookean_tet_dF2.m  nurbs_write_obj.m  plot_nurbs.m  test_shape_vem.m  test_shape_vem2.m  test_vem_dF.m  test_vem_v2.m  test_vem_v3.m  test_vem_v4.m  vem_dF_dq.m  vem_dF_dq2.m  vem_dP_dq.m  vem_error_matrix.m  vem_jacobian.m  vem_jacobian2.m  vem_mass_matrix.m  vem_mass_matrix_func.m  vem_nurbs.m  vem_nurbs_fast.m  vem_nurbs_with_collision.m  vem_nurbs_with_collision_dynamic.m  vem_sim.m  vem_sim_2d.m  vem_sim_3d.m  vem_sim_3d_fast.m  vem_sim_basic.m  vem_sim_shapes.m  (+2 more)
matlab/: .gitignore  CMakeLists.txt  basis_size.m  blending_weights_2d.m  build_weight_matrix.m  cantileaver_sim.m  compute_centroid_weights.m  compute_shape_matrices.m  compute_shape_matrices_newcom.m  cutoff_heuristic.m  distance_weights.m  generate_com.m  monomial_basis.m  monomial_basis_grad.m  monomial_basis_grad_matrix.m  monomial_basis_matrix.m  nurbs_blending_weights.m  plot_nurbs.m  point2trimesh.m  raycast_quadrature.m  simulate_twist.m  vem3dmesh_energy_matlab.m  vem_beam_tet2.mesh  vem_dF_dc.m  vem_dF_dq.m  vem_diffusion.m  vem_dx_dc.m  vem_error_matrix.m  vem_error_matrix2.m  vem_jacobian.m  vem_mass_matrix.m  vem_mass_matrix2.m  vem_preprocess.m  vem_simulate_nurbs.m  vem_simulate_nurbs_constraint.m  vem_simulate_nurbs_fmincon.m  vem_simulate_nurbs_fmincon_param.m  vem_simulate_nurbs_implicit.m  vem_simulate_nurbs_newcom.m  vem_simulate_nurbs_newcom2.m  (+5 more)
matlab/deprecated/: biem.m  compute_diffusion_weights.m  compute_projected_weights.m  cube_anim_example.m  identify_seams.m  nurbs_diffusion_weights.m  ray_intersect.m  ray_tri.m  test_blending_weights.m  test_vem.m  test_vem_stretch.m  test_vem_v3.m  vem3dmesh_neohookean_dq_matlab.m  vem_dF_dq.m  vem_error_matrix_old2.m  vem_jacobian_old2.m  vem_mass_matrix_matlab.m  vem_nurbs.m  vem_nurbs_old2.m  vem_sim_2d_old.m  vem_sim_3d_old.m  vem_sim_gumby.m  vem_sim_lamppost.m  vem_sim_shapes_old2.m  vem_sim_tire.m  vem_simulate_nurbs_cube_anim.m  vem_simulate_nurbs_fmincon_debug.m  vem_simulate_nurbs_implicit.m  vem_simulate_nurbs_with_collision.m  vem_simulate_nurbs_with_collision_debug.m  write_obj_per_part.m
matlab/mex/: ray_mesh_intersections.cpp  ray_mesh_intersections.m  vem3dmesh_neohookean_dq.cpp  vem3dmesh_neohookean_dq2.cpp  vem3dmesh_neohookean_dq2.m  vem3dmesh_neohookean_q.cpp  vem3dmesh_neohookean_q.m  vem3dmesh_polynomial_coefficients.cpp  vem3dmesh_simulate_one_step.cpp  (+4 more)
(+357 files in other folders)
